tests/errors/operators-int-suffix-range.ari
fn main() -> i64 {
  let value = 256u8;
  return value as i64;
}
